# rate-movies-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
config/: health.py  urls.py
config/settings/: base.py  local.py  prod.py  test.py
core/: constants.py
favorites/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
favorites/migrations/: 0001_initial.py  0002_favoritedmovie_genre_ids_favoritedmovie_overview_and_more.py  0003_rename_favorite_li_account_054f48_idx_favorited_l_account_68cef5_idx_and_more.py  0004_remove_favoritedlist_movie_ids.py  0005_alter_favoritedlist_list_name.py
tests/: conftest.py  test_favorites.py  test_tmdb_proxy.py
tests/favorites/: test_serializers_favorites.py  test_service_favorites.py  test_views_favorites.py
tests/tmdb/: test_serializers_tmdb.py  test_service_tmdb.py  test_views_tmdb.py
tmdb/: apps.py  client.py  serializers.py  services.py  urls.py  views.py
